--- a/src/main/resources/assets/nether_expanded/lang/en_us.json
+++ b/src/main/resources/assets/nether_expanded/lang/en_us.json
@@ -1,6 +1,11 @@
 {
   "item.nether_expanded.copper_gold_alloy": "Copper Gold Alloy",
   "item.nether_expanded.lava_wax": "Lava Wax",
+  "item.nether_expanded.copper_nugget": "Copper Nugget",
+
+  "upgrade.nether_expanded.gold_plated_upgrade": "Gold Plated Upgrade",
+  "item.nether_expanded.smithing_template.gold_plated_upgrade.applies_to": "Netherite Armor",
+  "item.nether_expanded.smithing_template.gold_plated_upgrade.ingrediants": "Copper Gold Alloy",
 
   "item.nether_expanded.gold_alloy_pickaxe": "Gold Alloy Pickaxe",
   "item.nether_expanded.gold_alloy_sword": "Gold Alloy Sword",
@@ -17,6 +22,8 @@
   "item.nether_expanded.gold_plated_chestplate": "Gold Plated Netherite Chestplate",
   "item.nether_expanded.gold_plated_leggings": "Gold Plated Netherite Leggings",
   "item.nether_expanded.gold_plated_boots": "Gold Plated Netherite Boots",
+
+  "block.nether_expanded.nether_ancient_cache": "Ancient Cache",
 
   "block.nether_expanded.waxed_oak_log": "Waxed Oak Log",
   "block.nether_expanded.waxed_spruce_log": "Waxed Spruce Log",
@@ -61,7 +68,55 @@
   "block.nether_expanded.waxed_acacia_planks": "Waxed Acacia Planks",
   "block.nether_expanded.waxed_cherry_planks": "Waxed Cherry Planks",
   "block.nether_expanded.waxed_dark_oak_planks": "Waxed Dark Oak Planks",
-  "block.nether_expanded.waxed_mangrove_planks": "Waxed Mangrove Planks"
+  "block.nether_expanded.waxed_mangrove_planks": "Waxed Mangrove Planks",
 
+  "block.nether_expanded.waxed_oak_stairs": "Waxed Oak Stairs",
+  "block.nether_expanded.waxed_spruce_stairs": "Waxed Spruce Stairs",
+  "block.nether_expanded.waxed_birch_stairs": "Waxed Birch Stairs",
+  "block.nether_expanded.waxed_jungle_stairs": "Waxed Jungle Stairs",
+  "block.nether_expanded.waxed_acacia_stairs": "Waxed Acacia Stairs",
+  "block.nether_expanded.waxed_cherry_stairs": "Waxed Cherry Stairs",
+  "block.nether_expanded.waxed_dark_oak_stairs": "Waxed Dark Oak Stairs",
+  "block.nether_expanded.waxed_mangrove_stairs": "Waxed Mangrove Stairs",
 
+  "block.nether_expanded.waxed_oak_leaves": "Waxed Oak Leaves",
+  "block.nether_expanded.waxed_spruce_leaves": "Waxed Spruce Leaves",
+  "block.nether_expanded.waxed_birch_leaves": "Waxed Birch Leaves",
+  "block.nether_expanded.waxed_jungle_leaves": "Waxed Jungle Leaves",
+  "block.nether_expanded.waxed_acacia_leaves": "Waxed Acacia Leaves",
+  "block.nether_expanded.waxed_cherry_leaves": "Waxed Cherry Leaves",
+  "block.nether_expanded.waxed_dark_oak_leaves": "Waxed Dark Oak Leaves",
+  "block.nether_expanded.waxed_mangrove_leaves": "Waxed Mangrove Leaves",
+  "block.nether_expanded.waxed_flowering_azalea_leaves": "Waxed Flowering Azalea Leaves",
+  "block.nether_expanded.waxed_azalea_leaves": "Waxed Azalea Leaves",
+
+  "block.nether_expanded.waxed_white_carpet": "Waxed White Carpet",
+  "block.nether_expanded.waxed_red_carpet": "Waxed Red Carpet",
+  "block.nether_expanded.waxed_blue_carpet": "Waxed Blue Carpet",
+  "block.nether_expanded.waxed_light_blue_carpet": "Waxed Light Blue Carpet",
+  "block.nether_expanded.waxed_green_carpet": "Waxed Green Carpet",
+  "block.nether_expanded.waxed_lime_carpet": "Waxed Lime Carpet",
+  "block.nether_expanded.waxed_black_carpet": "Waxed Black Carpet",
+  "block.nether_expanded.waxed_brown_carpet": "Waxed Brown Carpet",
+  "block.nether_expanded.waxed_gray_carpet": "Waxed Gray Carpet",
+  "block.nether_expanded.waxed_light_gray_carpet": "Waxed Light Gray Carpet",
+  "block.nether_expanded.waxed_orange_carpet": "Waxed Orange Carpet",
+  "block.nether_expanded.waxed_pink_carpet": "Waxed Pink Carpet",
+  "block.nether_expanded.waxed_magenta_carpet": "Waxed Magenta Carpet",
+  "block.nether_expanded.waxed_purple_carpet": "Waxed Purple Carpet",
+
+  "block.nether_expanded.waxed_white_wool": "Waxed White Wool",
+  "block.nether_expanded.waxed_red_wool": "Waxed Red Wool",
+  "block.nether_expanded.waxed_blue_wool": "Waxed Blue Wool",
+  "block.nether_expanded.waxed_light_blue_wool": "Waxed Light Blue Wool",
+  "block.nether_expanded.waxed_green_wool": "Waxed Green Wool",
+  "block.nether_expanded.waxed_lime_wool": "Waxed Lime Wool",
+  "block.nether_expanded.waxed_black_wool": "Waxed Black Wool",
+  "block.nether_expanded.waxed_brown_wool": "Waxed Brown Wool",
+  "block.nether_expanded.waxed_gray_wool": "Waxed Gray Wool",
+  "block.nether_expanded.waxed_light_gray_wool": "Waxed Light Gray Wool",
+  "block.nether_expanded.waxed_orange_wool": "Waxed Orange Wool",
+  "block.nether_expanded.waxed_pink_wool": "Waxed Pink Wool",
+  "block.nether_expanded.waxed_magenta_wool": "Waxed Magenta Wool",
+  "block.nether_expanded.waxed_purple_wool": "Waxed Purple Wool"
 }
